chore: adjust theme configuration, etc

--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -2,12 +2,12 @@
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
-    <span>
+    <div class="site-footer-inner">
       <div>{{ site.copyright }} @{{ site.author | escape }}</div>
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
       generator." href="http://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
       another theme." href="https://github.com/jeffreytse/jekyll-theme-yat">Yat Theme</a>.</div>
-    </span>
-    <span class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></span>
+      <div class="footer-col rss-subscribe">Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></div>
+    </div>
   </div>
 </footer>
