--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,8 @@
 ---
 layout: articles
+heading: 'Your awesome heading'
+subheading: 'Your awesome subheading'
+banner: 'default'
 ---
 
 {{ content }}
