--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -16,17 +16,34 @@
 }
 
 .site-brand {
+  @extend %vertical-center;
+
   float: left;
+  height: 100%;
+  max-height: 100%;
   margin-right: 50px;
 
+  .site-favicon {
+    margin-right: 10px;
+    height: 65%;
+    max-height: 65%;
+    border-radius: 65%;
+    box-shadow: 0 0 2px #080808d1;
+    transition: 0.2s;
+
+    &:hover {
+      box-shadow: 0 0 5px #080808d1;
+    }
+  }
+
   .site-title {
-    @include relative-font-size(1.625);
+    @include relative-font-size(1.125);
     font-weight: $base-font-weight;
     line-height: $header-height;
+    text-shadow: 0 0 3px #080808d1;
     letter-spacing: -1px;
 
-    &,
-    &:visited {
+    &, &:visited {
       color: $header-text-color;
     }
   }
