fix: correct google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,6 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
+    {%- include extensions/google-analytics.html -%}
   {%- endif -%}
 </head>
