update: adjust header and banner

--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -51,7 +51,7 @@
             <h3 class="page-banner-subheading">
               {{ subheading | default: page.subtitle | escape }}
             </h3>
-          <div>
+          </div>
 
         {%- endif -%}
       </div>
