fix: correct framework and trianglify issue

--- a/_includes/extensions/trianglify.html
+++ b/_includes/extensions/trianglify.html
@@ -8,7 +8,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/2.0.0/trianglify.min.js"></script>
 <script>
-  function setRandomBgImage(selector, seed, zoom = 1) {
+  function setRandomBgImage(selector, seed, zoom) {
     var element = document.querySelector(selector);
     if (!element) return;
     var pattern = Trianglify({
