--- a/_sass/misc/common-list.scss
+++ b/_sass/misc/common-list.scss
@@ -15,6 +15,8 @@
   }
 
   li {
+    border-bottom: solid 1px #fff;
+
     &:last-child {
       border-bottom: none;
     }
@@ -29,7 +31,7 @@
       transition: background 0.2s;
 
       &:hover {
-        background: mix($theme-color, #fff, 20%);
+        background: mix($theme-color, #eaeaea, 20%);
       }
     }
 
