fix: sticky compatibility issue

--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -243,6 +243,10 @@ table {
  */
 @mixin flex-sticky($top) {
   position: sticky;
+  position: -moz-sticky; /* <-- fix sticky compatibility issue */
+  position: -ms-sticky;
+  position: -o-sticky;
+  position: -webkit-sticky;
   align-self: flex-start; /* <-- fix the sticky not work issue */
   transform: scale(0.9999); /* <-- fix the sticky x overflow issue */
   top: $top;
